--- a/docker/dotot/stubby.yml
+++ b/docker/dotot/stubby.yml
@@ -104,28 +104,28 @@ dnssec_return_status: GETDNS_EXTENSION_TRUE
 #
 upstream_recursive_servers:
 
-  - address_data: 185.49.141.38
-    tls_auth_name: "getdnsapi.net"
-    tls_pubkey_pinset:
-      digest: "sha256"
-      value: foxZRnIh9gZpWnl+zEiKa0EJ2rdCGroMWm02gaxSc9Q=
+    #  - address_data: 185.49.141.38
+    #tls_auth_name: "getdnsapi.net"
+    #tls_pubkey_pinset:
+    # digest: "sha256"
+    # value: foxZRnIh9gZpWnl+zEiKa0EJ2rdCGroMWm02gaxSc9Q=
 
 ####### IPv4 addresses ######
 ## Cloudflare 1.1.1.1 and 1.0.0.1
   - address_data: 1.1.1.1
     tls_auth_name: "cloudflare-dns.com"
-  - address_data: 1.0.0.1
-    tls_auth_name: "cloudflare-dns.com"
+    #  - address_data: 1.0.0.1
+    #tls_auth_name: "cloudflare-dns.com"
 
 ## Google
-  - address_data: 8.8.8.8
-    tls_auth_name: "dns.google"
-  - address_data: 8.8.4.4
-    tls_auth_name: "dns.google"
+#  - address_data: 8.8.8.8
+#    tls_auth_name: "dns.google"
+#  - address_data: 8.8.4.4
+#    tls_auth_name: "dns.google"
 
 ## getdnsapi.net
-  - address_data: 185.49.141.37
-    tls_auth_name: "getdnsapi.net"
+#  - address_data: 185.49.141.37
+#    tls_auth_name: "getdnsapi.net"
 
 ## Surfnet
 #  - address_data: 145.100.185.15
@@ -134,10 +134,10 @@ upstream_recursive_servers:
 #    tls_auth_name: "dnsovertls1.sinodun.com"
 
 ## Quad 9 'secure' service - Filters, does DNSSEC, doesn't send ECS
-  - address_data: 9.9.9.9
-    tls_auth_name: "dns.quad9.net"
-  - address_data: 149.112.112.112
-    tls_auth_name: "dns.quad9.net"
+#  - address_data: 9.9.9.9
+#    tls_auth_name: "dns.quad9.net"
+#  - address_data: 149.112.112.112
+#    tls_auth_name: "dns.quad9.net"
 
 ## CleanBrowsing Security Filter
 #  - address_data: 185.228.168.168
@@ -159,20 +159,20 @@ upstream_recursive_servers:
 
 ####### IPv6 addresses ######
 ## Cloudflare servers
-  - address_data: 2606:4700:4700::1111
-    tls_auth_name: "cloudflare-dns.com"
-  - address_data: 2606:4700:4700::1001
-    tls_auth_name: "cloudflare-dns.com"
+#  - address_data: 2606:4700:4700::1111
+#    tls_auth_name: "cloudflare-dns.com"
+#  - address_data: 2606:4700:4700::1001
+#    tls_auth_name: "cloudflare-dns.com"
 
 ## Google
-  - address_data: 2001:4860:4860::8888
-    tls_auth_name: "dns.google"
-  - address_data: 2001:4860:4860::8844
-    tls_auth_name: "dns.google"
+#  - address_data: 2001:4860:4860::8888
+#    tls_auth_name: "dns.google"
+#  - address_data: 2001:4860:4860::8844
+#    ##tls_auth_name: "dns.google"
 
 ## getdnsapi.net
-  - address_data: 2a04:b900:0:100::37
-    tls_auth_name: "getdnsapi.net"
+#  - address_data: 2a04:b900:0:100::37
+#    tls_auth_name: "getdnsapi.net"
 
 ## Surfnet
 #  - address_data: 2001:610:1:40ba:145:100:185:15
@@ -181,8 +181,8 @@ upstream_recursive_servers:
 #    tls_auth_name: "nsovertls1.sinodun.com"
 
 ## Quad 9 'secure' service - Filters, does DNSSEC, doesn't send ECS
-  - address_data: 2620:fe::fe
-    tls_auth_name: "dns.quad9.net"
+#  - address_data: 2620:fe::fe
+#    tls_auth_name: "dns.quad9.net"
 
 ## CleanBrowsing Security Filter
 #  - address_data: 2a0d:2a00:1::2
